Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/UWorld.h

	
	DOTNET_EXPORT auto E_PROP_UWorld_DebugDrawTraceTag_GET(UWorld* Ptr) { return ConvertToManage_StringWrapper(Ptr->DebugDrawTraceTag); }
	DOTNET_EXPORT void E_PROP_UWorld_DebugDrawTraceTag_SET(UWorld* Ptr, char* Value) { Ptr->DebugDrawTraceTag = ConvertFromManage_FName(Value); }
	
	DOTNET_EXPORT auto E_PROP_UWorld_DeltaTimeSeconds_GET(UWorld* Ptr) { return Ptr->DeltaTimeSeconds; }
	DOTNET_EXPORT void E_PROP_UWorld_DeltaTimeSeconds_SET(UWorld* Ptr, float Value) { Ptr->DeltaTimeSeconds = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_FlushLevelStreamingType_GET(UWorld* Ptr) { return Ptr->FlushLevelStreamingType; }
	DOTNET_EXPORT void E_PROP_UWorld_FlushLevelStreamingType_SET(UWorld* Ptr, EFlushLevelStreamingType Value) { Ptr->FlushLevelStreamingType = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_LastTimeUnbuiltLightingWasEncountered_GET(UWorld* Ptr) { return Ptr->LastTimeUnbuiltLightingWasEncountered; }
	DOTNET_EXPORT void E_PROP_UWorld_LastTimeUnbuiltLightingWasEncountered_SET(UWorld* Ptr, double Value) { Ptr->LastTimeUnbuiltLightingWasEncountered = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_NextSwitchCountdown_GET(UWorld* Ptr) { return Ptr->NextSwitchCountdown; }
	DOTNET_EXPORT void E_PROP_UWorld_NextSwitchCountdown_SET(UWorld* Ptr, float Value) { Ptr->NextSwitchCountdown = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_NextURL_GET(UWorld* Ptr) { return ConvertToManage_StringWrapper(Ptr->NextURL); }
	DOTNET_EXPORT void E_PROP_UWorld_NextURL_SET(UWorld* Ptr, char* Value) { Ptr->NextURL = ConvertFromManage_FString(Value); }
	
	DOTNET_EXPORT auto E_PROP_UWorld_NumTextureStreamingDirtyResources_GET(UWorld* Ptr) { return Ptr->NumTextureStreamingDirtyResources; }
	DOTNET_EXPORT void E_PROP_UWorld_NumTextureStreamingDirtyResources_SET(UWorld* Ptr, int32 Value) { Ptr->NumTextureStreamingDirtyResources = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_NumTextureStreamingUnbuiltComponents_GET(UWorld* Ptr) { return Ptr->NumTextureStreamingUnbuiltComponents; }
	DOTNET_EXPORT void E_PROP_UWorld_NumTextureStreamingUnbuiltComponents_SET(UWorld* Ptr, int32 Value) { Ptr->NumTextureStreamingUnbuiltComponents = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_OriginOffsetThisFrame_GET(UWorld* Ptr) { return (INT_PTR)&(Ptr->OriginOffsetThisFrame); }
	DOTNET_EXPORT void E_PROP_UWorld_OriginOffsetThisFrame_SET(UWorld* Ptr, INT_PTR Value) { Ptr->OriginOffsetThisFrame = *(FVector*)Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_PauseDelay_GET(UWorld* Ptr) { return Ptr->PauseDelay; }
	DOTNET_EXPORT void E_PROP_UWorld_PauseDelay_SET(UWorld* Ptr, float Value) { Ptr->PauseDelay = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_PlayerNum_GET(UWorld* Ptr) { return Ptr->PlayerNum; }
	DOTNET_EXPORT void E_PROP_UWorld_PlayerNum_SET(UWorld* Ptr, int32 Value) { Ptr->PlayerNum = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_PreparingLevelNames_GET(UWorld* Ptr) { return ConvertToManage_TemplatePointerDescription(Ptr->PreparingLevelNames); }
	DOTNET_EXPORT void E_PROP_UWorld_PreparingLevelNames_SET(UWorld* Ptr, INT_PTR Value) { Ptr->PreparingLevelNames = *(TArray<FName>*)Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_RealTimeSeconds_GET(UWorld* Ptr) { return Ptr->RealTimeSeconds; }
	DOTNET_EXPORT void E_PROP_UWorld_RealTimeSeconds_SET(UWorld* Ptr, float Value) { Ptr->RealTimeSeconds = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_StreamingLevelsPrefix_GET(UWorld* Ptr) { return ConvertToManage_StringWrapper(Ptr->StreamingLevelsPrefix); }
	DOTNET_EXPORT void E_PROP_UWorld_StreamingLevelsPrefix_SET(UWorld* Ptr, char* Value) { Ptr->StreamingLevelsPrefix = ConvertFromManage_FString(Value); }
	
	DOTNET_EXPORT auto E_PROP_UWorld_StreamingVolumeUpdateDelay_GET(UWorld* Ptr) { return Ptr->StreamingVolumeUpdateDelay; }
	DOTNET_EXPORT void E_PROP_UWorld_StreamingVolumeUpdateDelay_SET(UWorld* Ptr, int32 Value) { Ptr->StreamingVolumeUpdateDelay = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_TimeSeconds_GET(UWorld* Ptr) { return Ptr->TimeSeconds; }
	DOTNET_EXPORT void E_PROP_UWorld_TimeSeconds_SET(UWorld* Ptr, float Value) { Ptr->TimeSeconds = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_UnpausedTimeSeconds_GET(UWorld* Ptr) { return Ptr->UnpausedTimeSeconds; }
	DOTNET_EXPORT void E_PROP_UWorld_UnpausedTimeSeconds_SET(UWorld* Ptr, float Value) { Ptr->UnpausedTimeSeconds = Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_URL_GET(UWorld* Ptr) { return (INT_PTR)&(Ptr->URL); }
	DOTNET_EXPORT void E_PROP_UWorld_URL_SET(UWorld* Ptr, INT_PTR Value) { Ptr->URL = *(FURL*)Value; }
	
	DOTNET_EXPORT auto E_PROP_UWorld_ViewLocationsRenderedLastFrame_GET(UWorld* Ptr) { return ConvertToManage_TemplatePointerDescription(Ptr->ViewLocationsRenderedLastFrame); }
	DOTNET_EXPORT void E_PROP_UWorld_ViewLocationsRenderedLastFrame_SET(UWorld* Ptr, INT_PTR Value) { Ptr->ViewLocationsRenderedLastFrame = *(TArray<FVector>*)Value; }
	
	
	DOTNET_EXPORT INT_PTR E_NewObject_UWorld(UObject* Parent, char* Name)
	{
		return (INT_PTR)NewObject<UWorld>(Parent, FName(UTF8_TO_TCHAR(Name)));
	}
	DOTNET_EXPORT auto E_UWorld_AddNetworkActor(UWorld* Self, AActor* Actor)
	{
		auto _p0 = Actor;
		Self->AddNetworkActor(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_AddPawn(UWorld* Self, APawn* Pawn)
	{
		auto _p0 = Pawn;
		Self->AddPawn(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_AllowLevelLoadRequests(UWorld* Self)
	{
		return Self->AllowLevelLoadRequests();
	}
	DOTNET_EXPORT auto E_UWorld_AreActorsInitialized(UWorld* Self)
	{
		return Self->AreActorsInitialized();
	}
	DOTNET_EXPORT auto E_UWorld_AreAlwaysLoadedLevelsLoaded(UWorld* Self)
	{
		return Self->AreAlwaysLoadedLevelsLoaded();
	}
	DOTNET_EXPORT auto E_UWorld_AsyncLoadAlwaysLoadedLevelsForSeamlessTravel(UWorld* Self)
	{
		Self->AsyncLoadAlwaysLoadedLevelsForSeamlessTravel();
	}
	DOTNET_EXPORT auto E_UWorld_BeginPlay(UWorld* Self)
	{
		Self->BeginPlay();
	}
	DOTNET_EXPORT auto E_UWorld_BroadcastLevelsChanged(UWorld* Self)
	{
		Self->BroadcastLevelsChanged();
	}
	DOTNET_EXPORT auto E_UWorld_BuildPIEPackagePrefix(UWorld* Self, int32 PIEInstanceID)
	{
		auto _p0 = PIEInstanceID;
		return ConvertToManage_StringWrapper(Self->BuildPIEPackagePrefix(_p0));
	}
	DOTNET_EXPORT auto E_UWorld_CancelPendingMapChange(UWorld* Self)
	{
		Self->CancelPendingMapChange();
	}
	DOTNET_EXPORT auto E_UWorld_CleanupActors(UWorld* Self)
	{
		Self->CleanupActors();
	}
	DOTNET_EXPORT auto E_UWorld_CleanupWorld(UWorld* Self, bool bSessionEnded, bool bCleanupResources, UWorld* NewWorld)
	{
		auto _p0 = bSessionEnded;
		auto _p1 = bCleanupResources;
		auto _p2 = NewWorld;
		Self->CleanupWorld(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UWorld_ClearActorComponentEndOfFrameUpdate(UWorld* Self, UActorComponent* Component)
	{
		auto _p0 = Component;
		Self->ClearActorComponentEndOfFrameUpdate(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_ClearStreamingLevels(UWorld* Self)
	{
		Self->ClearStreamingLevels();
	}
	DOTNET_EXPORT auto E_UWorld_ClearWorldComponents(UWorld* Self)
	{
		Self->ClearWorldComponents();
	}
	DOTNET_EXPORT auto E_UWorld_CommitMapChange(UWorld* Self)
	{
		Self->CommitMapChange();
	}
	DOTNET_EXPORT auto E_UWorld_CommitModelSurfaces(UWorld* Self)
	{
		Self->CommitModelSurfaces();
	}
	DOTNET_EXPORT auto E_UWorld_ConditionallyBuildStreamingData(UWorld* Self)
	{
		Self->ConditionallyBuildStreamingData();
	}
	DOTNET_EXPORT auto E_UWorld_ContainsActor(UWorld* Self, AActor* Actor)
	{
		auto _p0 = Actor;
		return Self->ContainsActor(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_ConvertToPIEPackageName(UWorld* Self, char* PackageName, int32 PIEInstanceID)
	{
		auto _p0 = ConvertFromManage_FString(PackageName);
		auto _p1 = PIEInstanceID;
		return ConvertToManage_StringWrapper(Self->ConvertToPIEPackageName(_p0, _p1));
	}
	DOTNET_EXPORT auto E_UWorld_CreateFXSystem(UWorld* Self)
	{
		Self->CreateFXSystem();
	}
	DOTNET_EXPORT auto E_UWorld_DebugDrawSceneQueries(UWorld* Self, char* UsedTraceTag)
	{
		auto _p0 = ConvertFromManage_FName(UsedTraceTag);
		return Self->DebugDrawSceneQueries(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_DelayGarbageCollection(UWorld* Self)
	{
		Self->DelayGarbageCollection();
	}
	DOTNET_EXPORT auto E_UWorld_DelayStreamingVolumeUpdates(UWorld* Self, int32 InFrameDelay)
	{
		auto _p0 = InFrameDelay;
		Self->DelayStreamingVolumeUpdates(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_DestroyActor(UWorld* Self, AActor* Actor, bool bNetForce, bool bShouldModifyLevel)
	{
		auto _p0 = Actor;
		auto _p1 = bNetForce;
		auto _p2 = bShouldModifyLevel;
		return Self->DestroyActor(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UWorld_DestroyDemoNetDriver(UWorld* Self)
	{
		Self->DestroyDemoNetDriver();
	}